...
                        WorkoutSummaryView(session: session)
                    } label: {
                        Text("Open").bold()
                    }
                    .buttonStyle(.borderedProminent)
                } else {
                    Button("Start") {
                        sessionPresented = true
                    }
                    .buttonStyle(.borderedProminent)
                }
            }
        }
...
